--- a/MyApp/templates/signup.html
+++ b/MyApp/templates/signup.html
@@ -171,7 +171,7 @@
     <div class="container">
         <div class="logo-section">
             <div class="logo-box">
-                <h1>TrainDeliv</h1>
+                <h1>TrainD</h1>
             </div>
         </div>
 
