--- a/MyApp/templates/userHome.html
+++ b/MyApp/templates/userHome.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   
-  <style>
+ <style>
     body {
       font-family: 'Arial', sans-serif; /* Gaming-style font */
       background-color: #282c34; /* Dark background */
@@ -160,14 +160,17 @@
     .btn-outline-primary:hover {
       background-color: rgba(0, 191, 255, 0.1); /* Light blue background on hover */
     }
-    
+    /* .lowerbtn{
+      margin-left: 80px;
+    } */
   </style>
 </head>
 <body>
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#" style="text-decoration: none;">{{ user.username | upper }}</a>
+      <a class="navbar-brand" href="#" style="text-decoration: none;">TrainD</a>
+      <!-- <a class="navbar-brand" href="#" style="text-decoration: none;">{{ user.username | upper }}</a> -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -176,11 +179,20 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="{{url_for('views.userhome')}}">Home</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="{{ url_for('views.orders') }}">Orders</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="{{ url_for('views.reward') }}">Rewards</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="{{url_for('views.delivery_challenge')}}">Challenge</a>
+          </li>
         </ul>
         <div class="d-flex ms-auto">
           <a class="btn btn-outline-danger me-3" href="{{ url_for('auth.logout') }}">Sign out</a>
-          <a class="btn btn-outline-danger me-3" href="{{ url_for('views.score_page') }}">Score</a>
-          <a href="{{ url_for('views.leaderboard') }}" class="btn btn-outline-danger" role="button">Leader Board</a>
+          <!-- <a class="btn btn-outline-danger me-3" href="{{ url_for('views.score_page') }}">Score</a> -->
+          <a class="btn btn-outline-danger" role="button">{{ user.username | upper }}</a>
         </div>
       </div>
     </div>
@@ -188,9 +200,9 @@
 
   <!-- Original buttons restored -->
   <div class="button-section">
-    <a href="{{ url_for('views.orders') }}"><button>Orders</button></a>
-    <a href="{{ url_for('views.reward') }}"><button>Rewards</button></a>
-    <a href="{{url_for('views.delivery_challenge')}}"><button>Challenge</button></a> <!-- New Challenge button added -->
+    <a href="{{ url_for('views.leaderboard') }}"><button>LeaderBoard</button></a>
+    <a href="{{ url_for('views.score_page') }}"><button>Score</button></a>
+    <!-- <a ><button>Challenge</button></a> New Challenge button added -->
   </div>
 
   <div class="plan-options">
@@ -228,8 +240,19 @@
 
 
       </div>
+
+      
+
+    
+
+    </div>
+    <hr>
+    <div class="button-section lowerbtn mt-4">
+      <a href="{{ url_for('views.graph_page') }}"><button>User Summary</button></a>
+      <a href="{{ url_for('views.maps') }}"><button>Maps</button></a>
     </div>
   </div>
+  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-7W2gRz/24uH8o1mc8zR9L9xRH5a2R8Lz/q8x4FmGe8+fM7Fu/QX/l0X8zYNUY/gN" crossorigin="anonymous"></script>
 </body>
 </html>
